[package]
name = "ns"
version = "0.1.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]

[dependencies]
rust-crypto = "^0.2"
num = "*"
rustc-serialize = "0.3"
rand = "0.3"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "genkey"
path = "src/genkey.rs"
